--- a/webcomics/static/css/footer_canva.css
+++ b/webcomics/static/css/footer_canva.css
@@ -197,8 +197,11 @@
 }
 
 @media (max-width: 900px) {
-    .contact-title {
-        font-size: 3rem;
+
+    .contact-title,
+    .canva-title {
+        font-size: 2.5rem !important;
+        letter-spacing: 5px !important;
     }
 
     .footer-contact-info {
