--- a/webcomics/templates/index.html
+++ b/webcomics/templates/index.html
@@ -80,18 +80,7 @@
         text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
     }
 
-    .concept-container-hero {
-        position: relative;
-        z-index: 10;
-        text-align: left;
-        /* LEFT as per mockup */
-        width: 100%;
-        max-width: 1400px;
-        padding: 180px 100px 80px 100px;
-        /* Increased top padding significantly */
-        margin-top: 0;
-        /* Removed negative margin that was pushing it up */
-    }
+    /* .concept-container-hero moved to home_redesign.css */
 
     .concept-hero h1 {
         color: #ffffff;
